--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,19 @@
-.form-container{
+.form-container {
   display: flex;
   background-color: aqua;
-
+  align-items: center;
 }
 
-.register-form{
+.register-form {
   display: flex;
   background-color: azure;
   flex-direction: column;
   margin: 2px;
   border: 2px;
   padding: 5px;
+}
+
+.form-field {
+  margin: 5px;
+  padding: 3px;
 }
