changed file layout structure completed

--- a/src/Form.css
+++ b/src/Form.css
@@ -25,3 +25,10 @@ header{
   text-align: center;
   padding: 5px;
 }
+
+
+.register-form p {
+  font-size: 0.8rem;
+  margin-top: 0.5rem;
+  color: #f00e0e;
+}
